# Outside-Your-Bubble

./: .env.example  .gitignore  AGENTS.md  PROGRESS.md  README.md  ZEST.yaml  docker-compose.yml  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
docs/: getting-started.md  roadmap.md  ui-prototype.md
prisma/: schema.prisma  seed.ts
prisma/migrations/20251017071135_init/: migration.sql
prisma/migrations/20251017071609_add_lens_unique/: migration.sql
prisma/migrations/20251017090000_add_nationality_reflection/: migration.sql
prisma/migrations/20251229172306_local_setup/: migration.sql
python/: README.md  pyproject.toml
python/openyourbubble/: __init__.py  categories.json  categories.py  cli.py  ingest.py  llm.py  professional.py  randomizer.py  study.py  translate.py
scripts/: build-dataset.ts  check-redis.ts  feedback-report.ts  ingest-runner.ts  ingest-sample.ts  inspect-items.ts  one-click.ps1  preview.ts  quickstart.js  quickstart.ts  rank-train.ts  summarize-pending.ts  verify-pending.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/deck/: deck-api.ts  page.tsx
src/app/signin/: page.tsx
src/components/: command-palette.tsx  site-header.tsx
src/components/deck/: achievement-toast-stack.tsx  deck-action-bar.tsx  index.ts  (+10 more)
src/lib/: achievements.ts  brief.ts  citations.test.ts  citations.ts  commands.ts  config.ts  deck.ts  events.ts  evidence.ts  learning.ts  logger.ts  partners.ts  prisma.ts  python.ts  redis.ts  share.ts  summarizer.ts  verification.ts
src/types/: deck.ts
types/: next-auth.d.ts
(+46 files in other folders)
